# subxt-whopsi

./: Cargo.toml  build.rs
src/: main.rs
