[package]
name = "subxt-shait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.29"
tokio = { version = "1.33.0", features = ["full"] }

[build-dependencies]
subxt-codegen="0.29"
subxt-metadata="0.29"
gensyn-runtime = { path= "/media/supersonic1t/projects/gensyn-ai/node-mathis-substrate-bump-v0.9.43/runtime" }
fs-err = "*"
syn = "2"
parity-scale-codec = "*"
serde_json = "*"
serde = "*"
thiserror = "1"