[package]
name = "subxt-shait"
version = "0.1.0"
edition = "2021"
author = "Bernhard Schuster"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.29"
tokio = { version = "1.33.0", features = ["full"] }

[build-dependencies]
subxt-codegen="0.29"
subxt-metadata="0.29"
polkadot-runtime = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.43" }
fs-err = "*"
syn = "2"
parity-scale-codec = "*"
serde_json = "*"
serde = "*"
thiserror = "1"